--- a/Fullstack_Live/Week_6/Day_4/Lesson/package.json
+++ b/Fullstack_Live/Week_6/Day_4/Lesson/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.9",
     "lesson": "file:",
     "slugify": "^1.6.6"
   }
