--- a/Fullstack_Live/Week_6/Day_5/LEsson/express-serer/package.json
+++ b/Fullstack_Live/Week_6/Day_5/LEsson/express-serer/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "dailychallenge",
+  "name": "express-serer",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "chalk": "^5.3.0",
-    "dailychallenge": "file:",
-    "fs": "^0.0.1-security"
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
+    "express-serer": "file:"
   }
 }
