--- a/Fullstack_Live/Week_6/Day_5/ExerciseXP/Exercise_2/book-api/package.json
+++ b/Fullstack_Live/Week_6/Day_5/ExerciseXP/Exercise_2/book-api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blog-api",
+  "name": "book-api",
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
@@ -10,7 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "blog-api": "file:",
+    "book-api": "file:",
     "express": "^4.21.2"
   }
 }
