--- a/Fullstack_Live/Week_6/Day_5/LEsson/Exercise/package.json
+++ b/Fullstack_Live/Week_6/Day_5/LEsson/Exercise/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
+    "exercise": "file:",
     "express": "^4.21.2",
     "nodemon": "^3.1.7"
   }
