--- a/Fullstack_Live/Week_7/Day_1/ExerciseXP/Exercise_1/package.json
+++ b/Fullstack_Live/Week_7/Day_1/ExerciseXP/Exercise_1/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "express-server",
+  "name": "exercise_1",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,7 +11,7 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.21.2",
-    "express-server": "file:"
+    "exercise_1": "file:",
+    "express": "^4.21.2"
   }
 }
