--- a/Fullstack_Live/Week_7/Day_2/db_con/package.json
+++ b/Fullstack_Live/Week_7/Day_2/db_con/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "express-server",
+  "name": "db_con",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "db.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,8 +10,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.21.2",
-    "express-server": "file:"
+    "dotenv": "^16.4.7",
+    "knex": "^3.1.0",
+    "pg": "^8.13.1"
   }
 }
