--- a/Fullstack_Live/Week_7/Day_2/ExerciseXP/Exercise_2/book-api/package.json
+++ b/Fullstack_Live/Week_7/Day_2/ExerciseXP/Exercise_2/book-api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blog-api",
+  "name": "book-api",
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
@@ -10,9 +10,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "blog-api": "file:",
+    "book-api": "file:",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "knex": "^3.1.0"
   }
