--- a/Fullstack_Live/Week_7/Day_2/Lesson/db-connection/package.json
+++ b/Fullstack_Live/Week_7/Day_2/Lesson/db-connection/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "db-connection": "file:",
     "dotenv": "^16.4.7",
     "knex": "^3.1.0",
     "pg": "^8.13.1"
