--- a/Fullstack_Live/Week_7/Day_2/ExerciseXP/Exercise_2/book-api/package.json
+++ b/Fullstack_Live/Week_7/Day_2/ExerciseXP/Exercise_2/book-api/package.json
@@ -13,6 +13,7 @@
     "book-api": "file:",
     "cors": "^2.8.5",
     "express": "^4.21.2",
-    "knex": "^3.1.0"
+    "knex": "^3.1.0",
+    "pg": "^8.13.1"
   }
 }
