--- a/Fullstack_Live/Week_8/Day_1/Lesson/Exercise-1/package.json
+++ b/Fullstack_Live/Week_8/Day_1/Lesson/Exercise-1/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "exercise-1": "file:",
     "preact": "^10.25.2"
   },
   "devDependencies": {
