--- a/Fullstack_Live/Week_8/Day_2/Day_2/package.json
+++ b/Fullstack_Live/Week_8/Day_2/Day_2/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-project",
+  "name": "day-2",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,9 +11,7 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-responsive-carousel": "^3.2.23",
-    "vite-project": "file:"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
