--- a/Fullstack_Live/Week_8/Day_2/my-users/package.json
+++ b/Fullstack_Live/Week_8/Day_2/my-users/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-project",
+  "name": "my-users",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.2.1",
+    "my-users": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-responsive-carousel": "^3.2.23",
-    "vite-project": "file:"
+    "tachyons": "^4.12.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
