--- a/Fullstack_Live/Week_8/Day_4/Lesson/Day_4/package.json
+++ b/Fullstack_Live/Week_8/Day_4/Lesson/Day_4/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "day3",
+  "name": "day-4",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,9 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "day3": "file:",
+    "day-4": "file:",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router": "^7.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
