--- a/Fullstack_Live/Week_8/Day_4/ExerciseXP/ExerciseXP/package.json
+++ b/Fullstack_Live/Week_8/Day_4/ExerciseXP/ExerciseXP/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "express": "^4.21.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router": "^7.1.1",
