--- a/Fullstack_Live/Week_8/Day_4/DailyChallenge_1/DailyChallenge/package.json
+++ b/Fullstack_Live/Week_8/Day_4/DailyChallenge_1/DailyChallenge/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.9",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "dailychallenge": "file:",
     "express": "^4.21.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
