--- a/Fullstack_Live/Week_8/Day_5/MiniProject_2/SnapShot/package.json
+++ b/Fullstack_Live/Week_8/Day_5/MiniProject_2/SnapShot/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dotenv": "^16.4.7",
     "pexels": "^1.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router": "^7.1.1"
+    "react-router": "^7.1.1",
+    "snapshot": "file:"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
