--- a/Fullstack_Live/Week_8/Day_5/MiniProject_2/SnapShot/src/.env
+++ b/Fullstack_Live/Week_8/Day_5/MiniProject_2/SnapShot/src/.env
@@ -1,1 +1,1 @@
-ENV_API_KEY = GxOrm5bxsvgfgx0P6bjqwGKJb0xhQiZgfhu1QXsjZJDlysGgwW8QxZQy
+REACT_APP_PEXELS_API_KEY = GxOrm5bxsvgfgx0P6bjqwGKJb0xhQiZgfhu1QXsjZJDlysGgwW8QxZQy
