--- a/Fullstack_Live/Week_9/Day_1/Lesson/exercise_light_dark/package.json
+++ b/Fullstack_Live/Week_9/Day_1/Lesson/exercise_light_dark/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "day_1",
+  "name": "exercise_light_dark",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,7 +10,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "day_1": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
