--- a/Fullstack_Live/Week_9/Day_1/Lesson/exercise_light_dark/package.json
+++ b/Fullstack_Live/Week_9/Day_1/Lesson/exercise_light_dark/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "exercise_light_dark": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
