--- a/Fullstack_Live/Week_9/Day_2/DailyChallenge/Planner/package.json
+++ b/Fullstack_Live/Week_9/Day_2/DailyChallenge/Planner/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
+    "planner": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
