--- a/Fullstack_Live/Week_9/Day_3/ExerciseGold/User_Auth/package.json
+++ b/Fullstack_Live/Week_9/Day_3/ExerciseGold/User_Auth/package.json
@@ -14,7 +14,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "user-auth": "file:",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
