--- a/Fullstack_Live/Week_9/Day_3/LEsson/connect/connect/package.json
+++ b/Fullstack_Live/Week_9/Day_3/LEsson/connect/connect/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
+    "connect": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
