--- a/Fullstack_Live/Week_9/Day_3/LEsson/tasks-planner/package.json
+++ b/Fullstack_Live/Week_9/Day_3/LEsson/tasks-planner/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
+    "tasks-planner": "file:",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
