--- a/Fullstack_Live/Week_10/Day_3/Lesson/typescript-day2/package.json
+++ b/Fullstack_Live/Week_10/Day_3/Lesson/typescript-day2/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "day-2-typescript",
+  "name": "typescript-day2",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,8 +11,5 @@
   "devDependencies": {
     "typescript": "~5.6.2",
     "vite": "^6.0.5"
-  },
-  "dependencies": {
-    "day-2-typescript": "file:"
   }
 }
