--- a/Fullstack_Live/Week_10/Day_3/Lesson/typescript-day2/package.json
+++ b/Fullstack_Live/Week_10/Day_3/Lesson/typescript-day2/package.json
@@ -11,5 +11,8 @@
   "devDependencies": {
     "typescript": "~5.6.2",
     "vite": "^6.0.5"
+  },
+  "dependencies": {
+    "typescript-day2": "file:"
   }
 }
