--- a/Fullstack_Live/Week_10/Day_1/ExerciseXP/vite-project/package.json
+++ b/Fullstack_Live/Week_10/Day_1/ExerciseXP/vite-project/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "todo-list",
+  "name": "vite-project",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -13,7 +13,6 @@
     "vite": "^6.0.5"
   },
   "dependencies": {
-    "todo-list": "file:",
-    "uuid": "^11.0.4"
+    "vite-project": "file:"
   }
 }
