--- a/Fullstack_Live/Week_11/Day_1/Lesson/jwt-auth/package.json
+++ b/Fullstack_Live/Week_11/Day_1/Lesson/jwt-auth/package.json
@@ -10,6 +10,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2"
   }
 }
