--- a/Fullstack_Live/Week_11/Day_1/Lesson/jwt-auth/package.json
+++ b/Fullstack_Live/Week_11/Day_1/Lesson/jwt-auth/package.json
@@ -11,6 +11,13 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "jsonwebtoken": "^9.0.2"
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-auth": "file:",
+    "knex": "^3.1.0",
+    "pg": "^8.13.1"
   }
 }
