--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 Fullstack_Live/Week_6/Day_4/Lesson/package-lock.json
 **.env
 Fullstack_Live/Week_9/Day_3/ExerciseGold/User_Auth/package-lock.json
+Fullstack_Live/Week_11/Day_1/ExerciseXP/package-lock.json
