--- a/Fullstack_Live/Week_11/Day_1/ExerciseXP/package.json
+++ b/Fullstack_Live/Week_11/Day_1/ExerciseXP/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "exercisexp",
+  "name": "jwt-auth",
   "version": "1.0.0",
   "description": "",
   "license": "ISC",
@@ -11,12 +11,12 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "body-parser": "^1.20.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "jwt-auth": "file:",
     "knex": "^3.1.0",
     "pg": "^8.13.1"
   }
