--- a/Fullstack_Live/Week_10/Day_4/Exercises/ExerciseXPNinja/package.json
+++ b/Fullstack_Live/Week_10/Day_4/Exercises/ExerciseXPNinja/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "exercisexpninja": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
