--- a/Fullstack_Live/Week_11/Day_3/Deploy server/deploy_server/package.json
+++ b/Fullstack_Live/Week_11/Day_3/Deploy server/deploy_server/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.17.3",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "react-node-app": "file:"
   }
 }
